CatalystX::ListFramework::Builder (0.05) UNRELEASED; urgency=low

  * Initial release on an unsuspecting world.
    For more details see the TODO file.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Fri, 18 Jul 2008 23:13:16 +0100