@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         CatalystX-ListFramework-Builder
-version:      0.05
+version:      0.06
 version_from: lib/CatalystX/ListFramework/Builder.pm
 installdirs:  site
 requires:
